fixup! update green line collapsing logic

--- a/apps/site/web/static/css/_schedule-v2.scss
+++ b/apps/site/web/static/css/_schedule-v2.scss
@@ -218,7 +218,7 @@ a {
   }
 }
 
-.route-stop-list.green-line .route-stop:first-child .stop-bubble:before {
+.route-stop-list.green-line .route-stop:first-child .stop-bubble::before {
   height: 100%; // override stop-bubble-first to prevent gaps on green line branches
 }
 
